sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: not found: value getMondeValeurs
		for(i<-0 to getMondeValeurs()-2) {
                            ^AlgCocktailSort1:9: error: not found: value getMondeValeurs
		for(i<-getMondeValeurs()-2 to 0 by -1) {
                       ^