sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var x:Boolean=true
	do {x=false
		for(i<-0 to getMondeValeurs()-2) {
			if (plusPetit(i,i+1)){
			echange(i,i+1)}
			x=true}
		for(i<-getMondeValeurs()-2 to 0 by -1) {
			if (plusPetit(i,i+1)){
			echange(i,i+1)}
			x=true}	
		
		
	}
	while(x)
	
	}

